feat: Add modular JavaScript files for API, map, and UI functionalities; update HTML templates for module loading

--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -71,5 +71,5 @@
 {% endblock %}
 
 {% block page_js %}
-    <script src="{{ get_static_path('js/realtime.js') }}"></script>
+    <script type="module" src="{{ get_static_path('js/realtime.js') }}"></script>
 {% endblock %}
