--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -131,5 +131,5 @@
 {% endblock %}
 
 {% block page_js %}
-    <script src="{{ get_static_path('js/historical.js') }}"></script>
+    <script type="module" src="{{ get_static_path('js/historical.js') }}"></script>
 {% endblock %}
