--- a/Proyecto_1_Diseno/templates/database.html
+++ b/Proyecto_1_Diseno/templates/database.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Historial de Coordenadas Oliver</title>
+    <title>Historial de Coordenadas</title>
     <style>
       body {
         font-family: "Courier New", monospace;
